--- a/css/style.css
+++ b/css/style.css
@@ -41,6 +41,19 @@
     animation: nuvens-animacao 10s infinite linear;
 }
 
+#pontuacao{
+    position: absolute;
+    left: 50%;
+    -webkit-text-stroke: 2px black; /* width and color */
+    font-family: sans; color: yellow;
+    z-index: 99;
+    background-color: rgba(0, 0, 0, 0.5);
+    padding: 5px;
+    line-height: 23px;
+    border-radius: 5px;
+    top: 5px;
+}
+
 @keyframes robo-animacao {
     from {
         right: -120px;
